--- a/.github/workflows/Buildandtestmain.yml
+++ b/.github/workflows/Buildandtestmain.yml
@@ -2,18 +2,26 @@ name: Build and Test
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-and-release:
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
       with:
-        java-version: 11
-    - name: Build with Gradle
-      run: ./gradlew build
-    - name: Run tests with JUnit
-      run: ./gradlew test
+        dotnet-version: '6.0.x'
+    - name: Restore NuGet packages
+      run: dotnet restore
+      working-directory: ./YourProjectName
+    - name: Build for Android
+      run: msbuild /t:Restore,Build /p:Configuration=Release /p:Platform="Android" YourProjectName.sln
+      working-directory: ./
+    - name: Build for iOS
+      run: msbuild /t:Restore,Build /p:Configuration=Release /p:Platform="iPhone" YourProjectName.sln
+      working-directory: ./
+    - name: Build for UWP
+      run: msbuild /t:Restore,Build /p:Configuration=Release /p:Platform="UAP" YourProject
