--- a/ATUProject1/ProjectV1VB/ProjectV1VB/ProjectV1VB.csproj
+++ b/ATUProject1/ProjectV1VB/ProjectV1VB/ProjectV1VB.csproj
@@ -16,4 +16,13 @@
   <ItemGroup>
     <Folder Include=".github\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\EmployeeDashboardPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\SignUpPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
