--- a/ATUProject1/EmployeeManagementSystem/appsettings.json
+++ b/ATUProject1/EmployeeManagementSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=C:\\Database\\EMSDatabase.db"
+    "DefaultConnection": "Data Source=C:\\Database\\VivienneBruenL00177803.db"
   },
   "Logging": {
     "LogLevel": {
@@ -9,9 +9,8 @@
     }
   },
   "AllowedHosts": "*",
-
-    "DatabaseSeed": false
+  "DatabaseSeed": false,
+  "Session": {
+    "IdleTimeoutMinutes": 20
   }
-
-
-
+}
