--- a/ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
+++ b/ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
@@ -21,6 +21,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
   </ItemGroup>
 
 </Project>
