create test devops folder

--- a/ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
+++ b/ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Devopstestfolder\" />
+  </ItemGroup>
+
 </Project>
