--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -15,7 +15,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '7.0.0'
+        dotnet-version: '7.0.x'
 
     - name: Build with dotnet
       run: dotnet build --configuration Release
