--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -18,8 +18,7 @@ jobs:
         dotnet-version: '7.0.x'
 
     - name: Build with dotnet
-      run: dotnet build --configuration Release ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.sln
+      run: dotnet build --configuration Release ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
 
     - name: Run tests
-      run: dotnet test --no-build --verbosity normal ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.sln
-
+      run: dotnet test --no-build --verbosity normal ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
