--- a/ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
+++ b/ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+		  <StartupObject>EmployeeManagementSystem.Program</StartupObject>
+	  <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-EmployeeManagementSystem-97b3b55a-6eb7-4399-89e0-fa2248542cc1</UserSecretsId>
   </PropertyGroup>
 
