--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -17,6 +17,12 @@ jobs:
         with:
           dotnet-version: '7.0.x'
 
+      - name: Clear NuGet package cache
+        run: dotnet nuget locals all --clear
+
+      - name: Restore NuGet packages
+        run: dotnet restore ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
+
       - name: Build with dotnet
         run: dotnet build --configuration Release --no-restore ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
 
