--- a/.github/workflows/SonarCloud.yml
+++ b/.github/workflows/SonarCloud.yml
@@ -42,11 +42,8 @@ jobs:
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
 
-      - name: Set MSBuild version
-        run: dotnet tool install --global MSBuild.Tools --version 14.0.25420.1
-
       - name: Build the project
-        run: MSBuild /version
+        run: dotnet build --configuration Release
 
       - name: Run SonarScanner
         env:
