--- a/.github/workflows/cloudbuild.yml
+++ b/.github/workflows/cloudbuild.yml
@@ -10,27 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.2.0
-      with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT }}
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0.2.0
+        with:
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT }}
 
-    - name: Configure Docker
-      run: gcloud auth configure-docker
-
-    - name: Build Docker image
-      run: docker build -t gcr.io/${{ secrets.GCP_PROJECT }}/employeemanagementsystem .
-
-    - name: Push Docker image
-      run: docker push gcr.io/${{ secrets.GCP_PROJECT }}/employeemanagementsystem
-
-    - name: Deploy to Google Cloud Run
-      run: gcloud run deploy employeemanagementsystem --image gcr.io/${{ secrets.GCP_PROJECT }}/employeemanagementsystem --platform managed --region us-central1 --allow-unauthenticated
-
-
-    - name: Deploy to Google Cloud Run
-      run: gcloud run deploy employeemanagementsystem --image gcr.io/${{ secrets.GCP_PROJECT }}/employeemanagementsystem --platform managed --region us-central1 --allow-unauthenticated
+      - name: Deploy to Google Cloud
+        run: gcloud app deploy --quiet
