--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT }}
 
       - name: Deploy to Google Cloud
-        run: gcloud app deploy ATUProject1/EmployeeManagementSystem/app.yml --quiet
+        run: gcloud app deploy --quiet
+
 
 
 
