--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - MainEMSCompleted
 
+env:
+  DOTNET_VERSION: '7.0.x'
+  APP_DIRECTORY: './ATUProject1/EmployeeManagementSystem'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -13,11 +17,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      - name: Build and publish .NET Core app
+        run: |
+          cd ${{ env.APP_DIRECTORY }}
+          dotnet build --configuration Release
+          dotnet publish --configuration Release --output ./published
+
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT }}
 
+      - name: Authenticate to Google Cloud
+        run: echo "${{ secrets.GCP_SA_KEY }}" | gcloud auth login
+
       - name: Deploy to Google Cloud
-        run: gcloud app deploy ATUProject1/EmployeeManagementSystem/app.yml --quiet
+        run: |
+          cd ${{ env.APP_DIRECTORY }}/published
+          gcloud app deploy --quiet
