--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,10 @@ jobs:
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT }}
+          
+      - name: Copy app.yaml to published directory
+        run: |
+          cp ${{ env.APP_DIRECTORY }}/app.yml ${{ env.APP_DIRECTORY }}/published/app.yaml
 
       - name: Deploy to Google Cloud
         run: |
