--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
           cd ${{ env.APP_DIRECTORY }}
           dotnet build --configuration Release
           dotnet publish --configuration Release --output ./published
+          
+      - name: Copy .deps.json to published directory
+        run: cp ATUProjectModule/ATUProject1/EmployeeManagementSystem/bin/Debug/net7.0/EmployeeManagementSystem.deps.json ./published
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.2.0
