--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,11 @@ jobs:
          ls -la ./published
 
           
-      - name: Copy .deps.json to published directory
+      - name: Rename .deps.json in published directory
         run: |
-          cd ${{ env.APP_DIRECTORY }}
-          cp bin/Debug/net7.0/EmployeeManagementSystem.deps.json ./published
+          cd ${{ env.APP_DIRECTORY }}/published
+          mv EmployeeManagementSystem.deps.json deps.json
+
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.2.0
