--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,9 @@ jobs:
       - name: Rename .deps.json in published directory
         run: |
           cd ${{ env.APP_DIRECTORY }}/published
-          mv EmployeeManagementSystem.deps.json deps.json
+          mv ${{ env.APP_DIRECTORY }}/published/deps.json ${{ env.APP_DIRECTORY }}/published/.deps.json
           ls -la
+
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.2.0
