--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,13 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: Build and publish .NET Core app
+      - name: Build and Publish
         run: |
-         cd ${{ env.APP_DIRECTORY }}
-         dotnet build --configuration Release
-         dotnet publish --configuration Release --output ./published
-         ls -la ./published
+          dotnet build --configuration Release
+          mkdir -p ./ATUProject1/EmployeeManagementSystem/published
+          cp -R ./ATUProject1/EmployeeManagementSystem/bin/Release/net7.0/. ./ATUProject1/EmployeeManagementSystem/published
+          cp ./ATUProject1/TestProject/bin/Release/net7.0/TestProject.dll ./ATUProject1/EmployeeManagementSystem/published
+
 
       - name: Rename .deps.json in published directory
         run: |
