--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,5 +42,6 @@ jobs:
 
       - name: Deploy to Google Cloud
         run: |
-          cd ${{ env.APP_DIRECTORY }}/published
-          gcloud app deploy --quiet
+         cd ${{ env.APP_DIRECTORY }}/published
+         gcloud app deploy --quiet --deps-path employeemanagementsystem.deps.json
+
