--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,5 +38,4 @@ jobs:
       - name: Deploy to Google Cloud Run
         run: |
           cd ${{ env.APP_DIRECTORY }}/published
-          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT }}/employeemanagementsystem
-          gcloud run deploy my-app --image gcr.io/${{ secrets.GCP_PROJECT }}/employeemanagementsystem --platform managed
+          gcloud run deploy my-app --image ./EmployeeManagementSystem --platform managed
