--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,9 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT }}
 
-      - name: Deploy to Google Cloud Run
+      - name: Deploy to Google Cloud
         run: |
-          cd ${{ env.APP_DIRECTORY }}/published
-          gcloud run deploy my-app --image ./EmployeeManagementSystem --platform managed --region ${{ env.REGION }}
+         cd ${{ env.APP_DIRECTORY }}/published
+         gcloud config set project caramel-feat-387820
+         gcloud builds submit --tag gcr.io/caramel-feat-387820/employeemanagementsystem
+         gcloud run deploy employee-management-service --image gcr.io/caramel-feat-387820/employeemanagementsystem --platform managed --region europe-west1
