--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -6,7 +6,7 @@ on:
       - MainEMSCompleted
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,5 +26,23 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release --no-restore ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
 
+  test:
+    needs: build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        dotnet: ['7.0.x']
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: ${{ matrix.dotnet }}
+
+      - name: Restore NuGet packages for test project
+        run: dotnet restore ATUProject1/TestProject/TestProject.csproj
+
       - name: Run tests
-        run: dotnet test --no-build --verbosity normal ATUProject1/EmployeeManagementSystem/EmployeeManagementSystem.csproj
+        run: dotnet test --no-build --verbosity normal ATUProject1/TestProject/TestProject.csproj
