--- a/.github/workflows/ossar.yml
+++ b/.github/workflows/ossar.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Setup .NET
+    - name: Setup .NET Core 7.0
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '7.0' 
@@ -31,6 +31,11 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
       working-directory: ATUProject1/EmployeeManagementSystem
+
+    - name: Setup .NET Core 6.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0'
 
     - name: Run OSSAR
       uses: github/ossar-action@v1
