--- a/.github/workflows/ossar.yml
+++ b/.github/workflows/ossar.yml
@@ -32,6 +32,11 @@ jobs:
       run: dotnet build --no-restore
       working-directory: ATUProject1/EmployeeManagementSystem
 
+    - name: Setup .NET Core 6.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0'
+
     - name: Run OSSAR
       uses: github/ossar-action@v1
       id: ossar
